Downgrading impl for Java 8