@@ -25,6 +25,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 import org.eclipse.jetty.server.Server;
@@ -96,7 +97,7 @@ public class EmbedMe
         // Look for resource in common file system paths
         try
         {
-            Path pwd = Path.of(System.getProperty("user.dir")).toAbsolutePath();
+            Path pwd = Paths.get(System.getProperty("user.dir")).toAbsolutePath();
             Path targetDir = pwd.resolve("target");
             if (Files.isDirectory(targetDir))
             {
